--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -14,9 +14,9 @@
 				<ul>
 					<li><a href="/imprint">{{$t "global.link.imprint" }}</a></li>
 					<li><a href="{{@root.theme.documents.specificFiles.termsOfUseSchool}}" target="_blank" aria-label="{{{$t "lib.global.link.termsOfUse"}}} PDF {{$t "global.link.openInNewTabWarning"}}"
-							rel="noopener">{{{$t "lib.global.link.termsOfUseHPI" }}}</a>
+							rel="noopener">{{{$t "lib.global.link.termsOfUse" }}}</a>
 					</li>
-					<li><a href="/datenschutz" target="_blank" aria-label="{{$t "global.text.dataProtection"}} PDF {{$t "global.link.openInNewTabWarning"}}"
+					<li><a href="{{@root.theme.documents.specificFiles.privacyExemplary}}" target="_blank" aria-label="{{$t "lib.global.link.dataProtectionDeclaration"}} PDF {{$t "global.link.openInNewTabWarning"}}"
 							rel="noopener">{{{$t "lib.global.link.dataProtectionDeclaration" }}}</a>
 					</li>
 					<li><a href="https://github.com/hpi-schul-cloud/" target="_blank" rel="noopener" aria-label="{{$t "lib.global.link.github"}} {{$t "global.link.openInNewTabWarning"}}">{{$t "lib.global.link.github"}}</a></li>
