--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -7,10 +7,11 @@
 						<a href="/imprint">{{$t "global.link.imprint" }}</a>
 					</li>
 					<li>
-						<a href="{{@root.theme.documents.specificFiles.termsOfUseSchool}}" target="_blank" rel="noopener" aria-label="{{{$t "lib.global.link.termsOfUseHPI"}}} PDF {{$t "global.link.openInNewTabWarning"}}">{{{$t "lib.global.link.termsOfUseHPI"}}}</a>
+						<a href="{{@root.theme.documents.specificFiles.termsOfUseSchool}}" target="_blank" rel="noopener" aria-label="{{{$t "lib.global.link.termsOfUse"}}} PDF {{$t "global.link.openInNewTabWarning"}}">{{{$t "lib.global.link.termsOfUse"}}}</a>
 					</li>
 					<li>
-						<a href="/datenschutz" target="_blank" rel="noopener" aria-label="{{{$t "lib.global.link.dataProtectionDeclaration"}}} PDF {{$t "global.link.openInNewTabWarning"}}">{{{$t "lib.global.link.dataProtectionDeclaration"}}}</a>
+						<a href="{{@root.theme.documents.specificFiles.privacyExemplary}}" target="_blank" aria-label="{{$t "lib.global.link.dataProtectionDeclaration"}} PDF {{$t "global.link.openInNewTabWarning"}}"
+							rel="noopener">{{{$t "lib.global.link.dataProtectionDeclaration" }}}</a>
 					</li>
 					<li>
 						<a href="mailto:{{getConfig "SC_CONTACT_EMAIL"}}?subject=Schul_Cloud%20Anfrage" target="_blank" rel="noopener" aria-label="{{$t "global.link.contact"}} {{$t "global.link.openInNewTabWarning"}}">{{$t "global.link.contact"}}</a>
